--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<!doctype html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Limitation of Media Query and What"s Container Query</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Limitation of Media Query and What's Container Query</title>
+  <meta name="description" content="Modularity is the heart of component based UI. Use future CSS container query with React Container Query Mixin to create modular responsive component.">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css">
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div id="app-root" class="app-root"></div>
